Minor edits. creashes on laptop

--- a/examine_data_EN.ipynb
+++ b/examine_data_EN.ipynb
@@ -22,20 +22,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First acquisition: 02 Jan 2018\n",
-      "Last acquisition: 30 Dec 2018\n",
-      "Total number of acquisitions: 115, although there might be clouds!\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/ucfajlg/.local/lib/python3.6/site-packages/tqdm/autonotebook/__init__.py:14: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
       "  \" (e.g. in jupyter console)\", TqdmExperimentalWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First acquisition: 07 Jan 2018\n",
+      "Last acquisition: 19 Oct 2018\n",
+      "Total number of acquisitions: 56, although there might be clouds!\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
     "from utils import grab_holdings, extract_roi_data_ndre\n",
     "\n",
     "img_db = grab_holdings(\n",
-    "    url=\"http://www2.geog.ucl.ac.uk/~ucfajlg/Colombia/database.json\")\n",
+    "    url=\"http://www2.geog.ucl.ac.uk/~ucfajlg/Estonia/database.json\")\n",
     "print(f\"First acquisition: {list(img_db.keys())[0].strftime('%d %b %Y'):s}\")\n",
     "print(f\"Last acquisition: {list(img_db.keys())[-1].strftime('%d %b %Y'):s}\")\n",
     "print(f\"Total number of acquisitions: {len(img_db.keys()):d}, although there might be clouds!\")"
@@ -67,30 +67,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0848f1135bfe4962a0c561a76e8fe0ae",
+       "model_id": "868ad9f153504fb4a3c1e5f0230a9c28",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=115), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=56), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ucfajlg/python/demo_colombia/utils.py:49: RuntimeWarning: Mean of empty slice\n",
-      "  if np.isnan(np.nanmean(data1)):\n"
-     ]
     },
     {
      "name": "stdout",
@@ -101,8 +93,7 @@
     }
    ],
    "source": [
-    "roi=\"https://gist.github.com/jgomezdans/bf202f1f0028c454ccc1ba85443414cb/raw\" + \\\n",
-    "    \"/e25580e4afb2402532619ce196494eb907472708/aguadas.geojson\"\n",
+    "roi=\"http://www2.geog.ucl.ac.uk/~ucfajlg/Estonia/roi.geojson\"\n",
     "analysis_data = extract_roi_data_ndre(img_db, roi=roi)"
    ]
   },
